corrected the alignment of text and vector images in the drop down menu

--- a/style.css
+++ b/style.css
@@ -64,13 +64,13 @@ body {
   text-align: center;
   align-items: center;
   transition: 0.6s;
-  height: 100.00vh;
+  height: 100vh;
   background-color: rgb(255, 255, 255);
-  background-image: url("img/image_geometry_menu_top_bg.svg"),url("img/image_geometry_menu_buttom_bg.svg");
-  background-size: 80%,97.5%;
+  background-image: url("img/image_geometry_menu_top_bg.svg"), url("img/image_geometry_menu_buttom_bg.svg");
+  background-size: 80%, 97.5%;
   background-position: top left, bottom left;
   background-repeat: no-repeat;
-  margin-top: -40px; 
+  margin-top: -40px;
 }
 
 .ham_menu2 {
